completed mobile design

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="left-container">
           <label>Bill</label>
           <input type="text" name="number" id="billAmount" />
-          <img src="images/icon-dollar.svg" alt="dollar icon" id="billInput" />
+          <img src="images/icon-dollar.svg" alt="dollar icon" id="billInput" class="dollarIcon"/>
 
+          <label>Select Tip %</label>
           <div class="tip-container">
-            <label>Select Tip %</label>
             <button class="tipBtn" id="05">5%</button>
             <button class="tipBtn" id="10">10%</button>
             <button class="tipBtn" id="15">15%</button>
@@ -60,7 +60,7 @@
               name="number"
               id="numberOfPeople"
               placeholder="0"
-            /><img src="images/icon-person.svg" alt="" />
+            /><img src="images/icon-person.svg" alt="" class="dollarIcon"/>
           </div>
         </div>
 
