--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Lovely Thakur</a>.
       </div>
     </main>
     <script src="script.js"></script>
